--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,16 @@
     "require": {
         "php": "^7.1",
         "ext-swoole": "^4.0",
-        "ext-inotify": "^2.0"
+        "ext-inotify": "^2.0",
+        "symfony/console": "^4.1",
+        "monolog/monolog": "^1.23"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2"
     },
     "license": "MIT",
-    "minimum-stability": "dev"
+    "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {"TagsServer\\": "src/"}
+    }
 }
